--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,11 @@ ext {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/redis.clients/jedis
+    implementation 'redis.clients:jedis:4.4.1'
     implementation group: 'com.vdurmont', name: 'emoji-java', version: '5.1.1'
     implementation group: 'org.telegram', name: 'telegrambots-spring-boot-starter', version: '6.1.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.liquibase:liquibase-core'
