--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,27 +10,33 @@ services:
       - /var/lib/postgresql:/var/lib/postgresql
     ports:
       - "5432:5432"
-  mongodb:
-    image: mongo
-    restart: unless-stopped
+  redis_cont:
+    image: redis:7.0.11-alpine
     ports:
-      - "27017:27017"
+      - "6379:6379"
     volumes:
-      - mongo:/data/db
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: root
-      MONGO_INITDB_DATABASE: meetingsdb
-  mongo-express:
-    image: mongo-express
-    restart: unless-stopped
-    ports:
-      - "8081:8081"
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: root
-      ME_CONFIG_MONGODB_PORT: 27017
-      ME_CONFIG_MONGODB_URL: "mongodb://root:root@mongodb:27017/"
+      - /db_data:/var/lib/redis/data
+#  mongodb:
+#    image: mongo
+#    restart: unless-stopped
+#    ports:
+#      - "27017:27017"
+#    volumes:
+#      - mongo:/data/db
+#    environment:
+#      MONGO_INITDB_ROOT_USERNAME: root
+#      MONGO_INITDB_ROOT_PASSWORD: root
+#      MONGO_INITDB_DATABASE: meetingsdb
+#  mongo-express:
+#    image: mongo-express
+#    restart: unless-stopped
+#    ports:
+#      - "8081:8081"
+#    environment:
+#      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+#      ME_CONFIG_MONGODB_ADMINPASSWORD: root
+#      ME_CONFIG_MONGODB_PORT: 27017
+#      ME_CONFIG_MONGODB_URL: "mongodb://root:root@mongodb:27017/"
 
 #  rabbitmq:
 #    image: rabbitmq:3.11.0-management
