--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,6 +15,17 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
 telegram:
   username: ${TELEGRAM_USERNAME}
   botToken: ${TELEGRAM_TOKEN}
+redis:
+  ttl:
+    user: 60
+    meeting: 1800
