--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
       - "6379:6379"
     volumes:
       - /db_data:/var/lib/redis/data
+    command: ["--notify-keyspace-events", "Ex"]
 #  mongodb:
 #    image: mongo
 #    restart: unless-stopped
@@ -25,7 +26,7 @@ services:
 #      - mongo:/data/db
 #    environment:
 #      MONGO_INITDB_ROOT_USERNAME: root
-#      MONGO_INITDB_ROOT_PASSWORD: root
+#      MONGO_INITDB_ROOT_PASSWORD: password
 #      MONGO_INITDB_DATABASE: meetingsdb
 #  mongo-express:
 #    image: mongo-express
@@ -33,10 +34,10 @@ services:
 #    ports:
 #      - "8081:8081"
 #    environment:
-#      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-#      ME_CONFIG_MONGODB_ADMINPASSWORD: root
+#      ME_CONFIG_MONGODB_ADMINUSERNAME: darik
+#      ME_CONFIG_MONGODB_ADMINPASSWORD: darik
 #      ME_CONFIG_MONGODB_PORT: 27017
-#      ME_CONFIG_MONGODB_URL: "mongodb://root:root@mongodb:27017/"
+#      ME_CONFIG_MONGODB_URL: "mongodb://darik:darik@mongodb:27017/"
 
 #  rabbitmq:
 #    image: rabbitmq:3.11.0-management
