added dto's and changed meeting service

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,10 +28,9 @@ telegram:
   bot:
     username: ${TELEGRAM_USERNAME}
     token: ${TELEGRAM_TOKEN}
-    webHookPath: https://ecf4-145-255-2-121.ngrok-free.app
+    webHookPath: https://8c32-145-255-2-121.ngrok-free.app
 redis:
   ttl:
     user: 60
 application:
   locale: ru-RU
-  zone: UTC+03:00
