--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,7 +23,7 @@ telegram:
   bot:
     username: ${TELEGRAM_USERNAME}
     token: ${TELEGRAM_TOKEN}
-    webHookPath: https://6df1-145-255-2-121.ngrok-free.app
+    webHookPath: https://b3b7-145-255-2-121.ngrok-free.app
     authorizePath: https://api.telegram.org/bot${telegram.bot.token}/setWebhook?url=${telegram.bot.webHookPath}
   meetings:
     startWorkDay: 9
