--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,3 @@
 databaseChangeLog:
   - include: 
-      file: db/changelog/ddl/create_tables-1.0.sql
+      file: db/changelog/v-1.0/changelog-v.1.0-cumulative.yaml
