--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.ufanet'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0-SNAPSHOT'
 sourceCompatibility = '17'
 
 configurations {
@@ -19,12 +19,15 @@ repositories {
 }
 ext {
     mapstructVersion = "1.5.3.Final"
+    telegrambotVersion = "6.7.0"
+    vdurmontEmojiVersion = "5.1.1"
+    jedisVersion = "4.4.1"
 }
 
 dependencies {
-    implementation 'redis.clients:jedis:4.4.1'
-    implementation group: 'com.vdurmont', name: 'emoji-java', version: '5.1.1'
-    implementation group: 'org.telegram', name: 'telegrambots-spring-boot-starter', version: '6.7.0'
+    implementation "redis.clients:jedis:${jedisVersion}"
+    implementation "com.vdurmont:emoji-java:${vdurmontEmojiVersion}"
+    implementation "org.telegram:telegrambots-spring-boot-starter:${telegrambotVersion}"
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
