--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,9 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
+//    id 'com.palantir.docker' version '0.35.0'
 }
-
+//
 group = 'com.ufanet'
 version = '1.0.0-SNAPSHOT'
 sourceCompatibility = '17'
@@ -13,10 +14,10 @@ configurations {
         extendsFrom annotationProcessor
     }
 }
-
 repositories {
     mavenCentral()
 }
+
 ext {
     mapstructVersion = "1.5.3.Final"
     telegrambotVersion = "6.7.0"
@@ -24,6 +25,13 @@ ext {
     jedisVersion = "4.4.1"
 }
 
+//docker {
+//    name "mycoolapp"
+//    dockerfile file("Dockerfile")
+//    copySpec.from(jar).rename(".*", "app.jar")
+//    buildArgs(['JAR_FILE': "app.jar"])
+//
+//}
 dependencies {
     implementation "redis.clients:jedis:${jedisVersion}"
     implementation "com.vdurmont:emoji-java:${vdurmontEmojiVersion}"
