--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,13 +1,6 @@
-server:
-  port: 8888
 spring:
   profiles:
-    active: polling
-  datasource:
-    username: root
-    password: root
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/meetsdb
+    default: dev, polling
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yaml
   jpa:
@@ -19,6 +12,11 @@ spring:
         format_sql: true
         jdbc:
           time_zone: UTC
+  datasource:
+    username: root
+    password: root
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/meetings
   data:
     redis:
       host: localhost
