--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -3,8 +3,8 @@ spring:
     username: root
     password: root
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://postgres:5432/meetings
+    url: jdbc:postgresql://localhost:5432/meetings
   data:
     redis:
-      host: redis_cache
+      host: localhost
       port: 6379
