--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,11 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+
+    - uses: actions/checkout@v2
+    - name: Run docker-compose
+      run:  docker-compose up -d
+
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
