--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,30 +15,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - uses: actions/checkout@v3
 
-    - name: Run docker-compose
-      run: docker-compose up -d
+      - name: Run docker-compose
+        run: docker-compose -f "docker-compose.yaml" up -d --build
 
-    - name: Set properties in .env file
-      run: echo TELEGRAM_USERNAME="${{ secrets.TELEGRAM_USERNAME }}"$'\n'TELEGRAM_TOKEN="${{ secrets.TELEGRAM_TOKEN }}" >> gradle.properties
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+          cache: 'gradle'
 
-    - name: Run docker-compose
-      run:  docker-compose up -d
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: -q --stacktrace -PTELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} -PTELEGRAM_USERNAME=${{ secrets.TELEGRAM_USERNAME }} build
-#    - name: Setup Gradle
-#      uses: gradle/gradle-build-action@v2
-#
-#    - name: Execute Gradle build
-#      run: ./gradlew -q --stacktrace -PTELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} -PTELEGRAM_USERNAME=${{ secrets.TELEGRAM_USERNAME }} build
+      - name: Grant Permissions to gradlew
+        run: chmod +x gradlew
+
+      - name: Gradle build
+        run: ./gradlew clean -q --stacktrace -PTELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} -PTELEGRAM_USERNAME=${{ secrets.TELEGRAM_USERNAME }} build
 
 #    - name: Build and push
 #      uses: docker/build-push-action@v3
@@ -47,15 +40,3 @@ jobs:
 #        build-args: |
 #          "TELEGRAM_USERNAME=${{ secrets.TELEGRAM_USERNAME }}"
 #          "TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }}"
-    - name: Run docker-compose
-      run:  docker-compose up -d
-
-#    - name: Build & push Docker image
-#      uses: mr-smithers-excellent/docker-build-push@v6
-#      with:
-#        image: aanailevich/meetings-bot
-#        tags: latest
-#        registry: docker.io
-#        dockerfile: Dockerfile
-#        username: ${{ secrets.DOCKER_USERNAME }}
-#        password: ${{ secrets.DOCKER_PASSWORD }}
