--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,8 @@
 spring.profiles.active=dev,polling
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 spring.jpa.hibernate.ddl-auto=none
-telegram.bot.username=ufanet_meetingbot
-telegram.bot.token=6225072224:AAE7Pot6RmEdbsaTcN6btorIaHsHUHs_dhw
+telegram.bot.username=${TELEGRAM_USERNAME}
+telegram.bot.token=${TELEGRAM_TOKEN}
 telegram.bot.webHookPath=https://0fd9-2a00-1fa1-82f3-a006-3916-3d82-f1a1-ecc6.ngrok-free.app
 telegram.bot.authorizePath=https://api.telegram.org/bot${telegram.bot.token}/setWebhook?url=${telegram.bot.webHookPath}
 spring.datasource.hikari.max-lifetime=10000
