--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,12 +11,9 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
-
       - name: Run docker-compose
         run: docker-compose -f "docker-compose.yaml" up -d --build
 
@@ -27,16 +24,16 @@ jobs:
           distribution: 'adopt'
           cache: 'gradle'
 
-      - name: Grant Permissions to gradlew
-        run: chmod +x gradlew
-
       - name: Gradle build
-        run: ./gradlew clean -q --stacktrace -PTELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} -PTELEGRAM_USERNAME=${{ secrets.TELEGRAM_USERNAME }} build
+        run: ./gradlew build --debug --stacktrace -q -PTELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} -PTELEGRAM_USERNAME=${{ secrets.TELEGRAM_USERNAME }}
 
-#    - name: Build and push
-#      uses: docker/build-push-action@v3
-#      with:
-#        context: .
-#        build-args: |
-#          "TELEGRAM_USERNAME=${{ secrets.TELEGRAM_USERNAME }}"
-#          "TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }}"
+      - name: Build & push Docker image
+        uses: mr-smithers-excellent/docker-build-push@v5
+        with:
+          image: aanailevich/meetings-bot
+          tags: latest
+          registry: docker.io
+          dockerfile: Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
