--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,11 +24,12 @@ telegram:
 cache:
   redis:
     ttl:
-      user: 30
+      user: 20
       groupMembers: 10
+      group: 10
   custom:
     ttl:
       meeting: 10
-      bot: 30
+      bot: 20
 application:
   locale: ru-RU
