--- a/docker-compose-deploy.yaml
+++ b/docker-compose-deploy.yaml
@@ -22,14 +22,12 @@ services:
       - /redis_storage:/var/lib/redis/data
 
   meetings-bot:
-    restart: on-failure
     container_name: meetings-bot
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: aanailevich/meetings-bot:latest
     ports:
       - "8080:8080"
-    env_file: ./.env
+    env_file:
+      - ./.env
     environment:
       TELEGRAM_USERNAME: ${TELEGRAM_USERNAME}
       TELEGRAM_TOKEN: ${TELEGRAM_TOKEN}
