--- a/src/main/resources/application-deploy.yaml
+++ b/src/main/resources/application-deploy.yaml
@@ -3,8 +3,8 @@ spring:
     username: root
     password: root
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://postgres:5432/meetings
+    url: jdbc:postgresql://postgres:5432/postgres
   data:
     redis:
-      host: redis_cache
+      host: redis
       port: 6379
