--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -3,7 +3,7 @@ spring:
     username: root
     password: root
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/meetings
+    url: jdbc:postgresql://localhost:5432/postgres
   data:
     redis:
       host: localhost
