--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,28 +12,17 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      TELEGRAM_USERNAME: ${{ secrets.TELEGRAM_USERNAME }}
+      TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
 
       - name: Setting environment variables
-        run: truncate -s 0 .env && echo TELEGRAM_USERNAME="${{ secrets.TELEGRAM_USERNAME }}"$'\n'TELEGRAM_TOKEN="${{ secrets.TELEGRAM_TOKEN }}" >> .env
-
-      - name: Run docker-compose
-        run: docker-compose -f "docker-compose-ide.yaml" up -d --build
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-          cache: 'gradle'
-
-      - name: Grant Permissions to gradlew
-        run: chmod +x gradlew
-
-      - name: Gradle build
-        run: ./gradlew clean -q --stacktrace -PTELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} -PTELEGRAM_USERNAME=${{ secrets.TELEGRAM_USERNAME }} build
+        run: |
+          truncate -s 0 .env 
+          echo TELEGRAM_USERNAME="${{ secrets.TELEGRAM_USERNAME }}"$'\n'TELEGRAM_TOKEN="${{ secrets.TELEGRAM_TOKEN }}" >> .env 
 
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v5
@@ -41,6 +30,8 @@ jobs:
           image: aanailevich/meetings-bot
           tags: latest
           registry: docker.io
+          buildArgs:
+            BOT_TOKEN=${{ secrets.TELEGRAM_TOKEN }},BOT_USERNAME=${{ secrets.TELEGRAM_USERNAME }}
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
