--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -1,4 +1,4 @@
-name: project ci/cd flow
+name: project flow
 
 on:
   push:
@@ -12,9 +12,6 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      TELEGRAM_USERNAME: ${{ secrets.TELEGRAM_USERNAME }}
-      TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
@@ -22,7 +19,22 @@ jobs:
       - name: Setting environment variables
         run: |
           truncate -s 0 .env 
-          echo TELEGRAM_USERNAME="${{ secrets.TELEGRAM_USERNAME }}"$'\n'TELEGRAM_TOKEN="${{ secrets.TELEGRAM_TOKEN }}" >> .env 
+          echo TELEGRAM_USERNAME="${{ secrets.TELEGRAM_USERNAME }}" >> .env
+          echo TELEGRAM_TOKEN="${{ secrets.TELEGRAM_TOKEN }}" >> .env 
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
+
+      - name: Testing
+        uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
+        with:
+          arguments: test
 
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v5
@@ -30,8 +42,6 @@ jobs:
           image: aanailevich/meetings-bot
           tags: latest
           registry: docker.io
-          buildArgs:
-            BOT_TOKEN=${{ secrets.TELEGRAM_TOKEN }},BOT_USERNAME=${{ secrets.TELEGRAM_USERNAME }}
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
