--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
-spring.profiles.active=dev,polling
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 telegram.bot.username=${TELEGRAM_USERNAME}
 telegram.bot.token=${TELEGRAM_TOKEN}
-spring.datasource.hikari.max-lifetime=10000
